Feat: add dark mode

--- a/DiffuserStick/Localizable.xcstrings
+++ b/DiffuserStick/Localizable.xcstrings
@@ -1727,6 +1727,29 @@
         }
       }
     },
+    "loc.setting.header.theme" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Appearance"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "アプリの外観"
+          }
+        },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "앱 테마"
+          }
+        }
+      }
+    },
     "loc.setting.iap.purchase.complete" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -1838,6 +1861,75 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "도움말 보기"
+          }
+        }
+      }
+    },
+    "loc.setting.theme.dark" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "🌙 Dark"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "🌙 ダーク"
+          }
+        },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "🌙 다크"
+          }
+        }
+      }
+    },
+    "loc.setting.theme.light" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "🔆 Light"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "🔆 ライト"
+          }
+        },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "🔆 라이트"
+          }
+        }
+      }
+    },
+    "loc.setting.theme.system" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "📱 System"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "📱 システム"
+          }
+        },
+        "ko" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "📱 시스템"
           }
         }
       }
